--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Upload csv file</h1>
+        <h1>Upload csv file of employee</h1>
         <form action="" method="post" enctype="multipart/form-data">
         <p><input type="file" name="file"></p>
         <input type="submit" value="submit">
